<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/windowBackground"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="ru.hawk_inc.ledlighter.NewProjectActivity"
    tools:showIn="@layout/activity_new_project">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:layout_marginEnd="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:textColor="@color/textColorPrimary"
        android:textSize="@dimen/text_header_size"
        android:id="@+id/new_name"
        android:hint="@string/stub_new_name"
        android:textColorHint="@color/textColorDark"
        android:backgroundTint="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="2dp"
        android:text="@string/stub_new_mode"
        android:textColor="@color/textColorDark"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <android.support.v7.widget.SwitchCompat
        android:id="@+id/new_mode_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:text="@string/stub_new_normal"
        android:textColor="@color/textColorPrimary"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="@+id/new_mode_switch"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/new_mode_switch" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginEnd="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:background="@color/textColorDark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/new_name" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="24dp"
        android:layout_marginTop="8dp"
        android:text="@string/stub_new_advanced"
        android:textColor="@color/textColorPrimary"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="@+id/new_mode_switch"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/new_mode_switch" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginEnd="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:background="@color/textColorDark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/new_mode_switch" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="2dp"
        android:text="@string/stub_new_theme"
        android:textColor="@color/textColorDark"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:text="@string/stub_new_dark"
        android:textColor="@color/textColorPrimary"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="@+id/new_theme"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/new_theme" />

    <android.support.v7.widget.SwitchCompat
        android:id="@+id/new_theme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="24dp"
        android:layout_marginTop="8dp"
        android:text="@string/stub_new_light"
        android:textColor="@color/textColorPrimary"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="@+id/new_theme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/new_theme" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/new_text_cancel"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:textSize="16sp"
            android:gravity="center"
            android:layout_weight="1"
            android:background="#333"
            android:textColor="#666"
            android:text="@string/stub_cancel" />

        <TextView
            android:id="@+id/new_text_create"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:textSize="16sp"
            android:gravity="center"
            android:layout_weight="1"
            android:background="#0ee"
            android:textColor="@color/textColorDark"
            android:text="@string/stub_new_create" />
    </LinearLayout>


</android.support.constraint.ConstraintLayout>
